Update tutorial data
- Update language formatting

--- a/_data/take5/GYM-5053.yml
+++ b/_data/take5/GYM-5053.yml
@@ -14,7 +14,7 @@ subtopics:
 video_ID: DgungAdVLPA
 video_duration: "4:52"
 featured: true
-short_description: "In this tutorial, you’ll learn three ways to create a compelling and unique “About Page” for your online portfolio."
+short_description: "In this tutorial, you’ll learn three ways to create a compelling and unique About page for your online portfolio."
 project_file_source:
 project_files:
 related_content:
@@ -24,7 +24,7 @@ related_content:
   url: "https://www.scienceofpeople.com/home-photo-shoot/"
 - label: "Are people still using contact forms? By Birgitta Rún Sveinbjörnsdóttir"
   url: "https://uxdesign.cc/your-users-do-not-trust-contact-forms-but-what-do-they-use-instead-a89bee668e48"
-- label: "Gymnasium: Make a Great First Impression With Your Portfolio"
+- label: "Gymnasium: Make a Great First Impression with Your Portfolio"
   url: "https://thegymnasium.com/courses/take5/make-a-great-first-impression-with-your-portfolio"
 skill_level: "Beginner"
 ---
