Update tutorial title style
- Update capitalization of with

--- a/_data/take5/GYM-5021.yml
+++ b/_data/take5/GYM-5021.yml
@@ -22,7 +22,7 @@ project_files:
 related_content:
 - label: "Unicode Character Table"
   url: "https://unicode-table.com"
-- label: "Styling Empty Cells With Generated Content And CSS Grid Layout by Rachel Andrew"
+- label: "Styling Empty Cells with Generated Content And CSS Grid Layout by Rachel Andrew"
   url: "https://www.smashingmagazine.com/2018/02/generated-content-grid-layout/"
 - label: "The W3C documentation on how to insert content in a document."
   url: "https://www.w3.org/TR/css-content-3/"
