--- a/_data/take5/GYM-5033.yml
+++ b/_data/take5/GYM-5033.yml
@@ -26,7 +26,7 @@ related_content:
   url: "https://webaim.org/techniques/keyboard/"
 - label: "I Threw Away my Mouse by Manuel Matuzovic"
   url: "https://www.24a11y.com/2018/i-threw-away-my-mouse/"
-- label: "I Used The Web For A Day With Just A Keyboard by Chris Ashton"
+- label: "I Used The Web For A Day with Just A Keyboard by Chris Ashton"
   url: "https://www.smashingmagazine.com/2018/07/web-with-just-a-keyboard/"
 - label: "MDN: The filter CSS property"
   url: "https://developer.mozilla.org/en-US/docs/Web/CSS/filter"
