--- a/_data/take5/GYM-5025.yml
+++ b/_data/take5/GYM-5025.yml
@@ -1,6 +1,6 @@
 ---
 course_ID: GYM-5025
-title: "Getting Started With CSS Variables"
+title: "Getting Started with CSS Variables"
 date: 2020-01-27T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5025/
