--- a/_data/take5/GYM-5035.yml
+++ b/_data/take5/GYM-5035.yml
@@ -1,6 +1,6 @@
 ---
 course_ID: GYM-5035
-title: "Responsively Designing With Viewport Units"
+title: "Responsively Designing with Viewport Units"
 date: 2020-06-25T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5035/
