--- a/_data/take5/GYM-5043.yml
+++ b/_data/take5/GYM-5043.yml
@@ -1,6 +1,6 @@
 ---
 course_ID: GYM-5043
-title: "Improving Accessibility With Color Contrast"
+title: "Improving Accessibility with Color Contrast"
 date: 2020-10-20T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5043/
