--- a/_data/take5/GYM-5051.yml
+++ b/_data/take5/GYM-5051.yml
@@ -28,7 +28,7 @@ related_content:
   url: "https://uxdesign.cc/mastering-frame-nesting-in-figma-df0ddecdeb92"
 - label: "Figma tutorial: Auto Layout navigation menu"
   url: "https://youtu.be/bh98SF7OjUk"
-- label: "Gymnasium: Working With Auto Layout in Figma"
+- label: "Gymnasium: Working with Auto Layout in Figma"
   url: "https://thegymnasium.com/courses/take5/working-with-auto-layout-in-figma"
 skill_level: "Intermediate"
 ---
