--- a/netlify.toml
+++ b/netlify.toml
@@ -9,10 +9,12 @@
 [[headers]]
   for = "*.js"
   [headers.values] # cache for 1 year
+    Access-Control-Allow-Origin = "*"
     Cache-Control = "public, max-age=31536000"
 [[headers]]
   for = "*.css"
   [headers.values] # cache for 1 year
+    Access-Control-Allow-Origin = "*"
     Cache-Control = "public, max-age=31536000"
 [[headers]]
   for = "/*.(svg|jpg|jpeg|png|gif|webp|ico|ttf|ttc|otf|eot|woff|woff2)"
