--- a/_data/take5/GYM-5053.yml
+++ b/_data/take5/GYM-5053.yml
@@ -5,7 +5,7 @@ date: 2022-08-24T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5053/
 poster_art: /img/take5/posters/gym-5053.jpg
-live: true
+live: false
 instructor: "Jeremy Osborn"
 instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "Career Skills"
@@ -13,7 +13,7 @@ subtopics:
   - label: "Portfolio Development"
 video_ID: DgungAdVLPA
 video_duration: "4:52"
-featured: true
+featured: false
 short_description: "In this tutorial, you’ll learn three ways to create a compelling and unique About page for your online portfolio."
 project_file_source:
 project_files:
