--- a/_data/take5/GYM-5053.yml
+++ b/_data/take5/GYM-5053.yml
@@ -22,7 +22,7 @@ related_content:
   url: "https://creativecloud.adobe.com/cc/discover/article/how-to-write-an-about-me-page-that-gets-you-hired"
 - label: "Take a New Profile Picture with an Easy Home Photo Shoot"
   url: "https://www.scienceofpeople.com/home-photo-shoot/"
-- label: "Are people still using contact forms? By Birgitta Rún Sveinbjörnsdóttir"
+- label: "Are people still using contact forms? by Birgitta Rún Sveinbjörnsdóttir"
   url: "https://uxdesign.cc/your-users-do-not-trust-contact-forms-but-what-do-they-use-instead-a89bee668e48"
 - label: "Gymnasium: Make a Great First Impression with Your Portfolio"
   url: "https://thegymnasium.com/courses/take5/make-a-great-first-impression-with-your-portfolio"
