--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -4,29 +4,24 @@ auth_promo: articles/meet-the-metaverse.html
 # Live Stream
 # Set true/false (lowercase).
 # Note: true overrides current/auth promo heros
-live_stream: false
+live_stream: true
 
 # Source
 # Set twitch/youtube (lowercase)
 # Note: As a fallback, the current promo displays if a typo/erroneous/null source value is set
-embed_source: "youtube"
+embed_source: "twitch"
 
 # Content
 # Update per live stream, if needed
 title: "Live Stream"
-short_description: "A live transmission of an event over the Internet."
+short_description: "Working within Spatial."
 byline: "The Gymnasium Team"
 
 # twitch
-# Docs: https://dev.twitch.tv/docs/embed
 twitch_channel: "andrewpmiller"
-# Set video-with-chat/video (Default: video-with-chat [when channel is set])
-twitch_layout: "video"
-# Set light/dark (Default: dark)
-twitch_theme: "dark"
 
 # youtube
-youtube_video_ID: ""
+youtube_video_ID: "zRNUPU2dujU"
 
 # Aspect Ratio 16:19
 embed_width: "854"
