--- a/_data/courses/GYM-002.yml
+++ b/_data/courses/GYM-002.yml
@@ -8,7 +8,7 @@ retired_message:
   1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course, but you can still view the lessons. <span class='text-wrap'>We recommend taking the updated course <a href='https://thegymnasium.com/courses/course-v1:GYM+012+0/about'>Introduction to Node.js</a> (and earning a badge) instead.</span>"
 url: /courses/GYM/002/0/about
 poster_art: /img/course-artwork/png/gym-002.png
-topic: "Design & Development"
+topic: "Development"
 short_description: "This course has been retired."
 short_description_orig: "Learn the basics of Node.js by building a “sample social” profile form."
 instructor: jhargrove
@@ -16,9 +16,11 @@ skills:
   - label: "Installing a Node.js server"
   - label: "Dynamic rendering with the Express view engine"
   - label: "Working with JSON data"
-  - label: "And more…"
 audience:
   - label: "Front-End Developers"
   - label: "Back-End Developers"
   - label: "JavaScript Developers and Programmers"
+lessons_duration: "Under 1 Hour"
+completion_duration: "Up to 2 Hours"
+skill_level: "Intermediate"
 ---
