--- a/_data/courses/GYM-004.yml
+++ b/_data/courses/GYM-004.yml
@@ -6,16 +6,18 @@ course_type: short
 live: true
 url: /courses/GYM/004/0/about
 poster_art: /img/course-artwork/png/gym-004.png
-topic: "Design & Development"
+topic: "Development"
 short_description: "Learn how to convert your HTML/CSS design into a WordPress website. Discover how to set up a local development environment, and add WordPress tags to your design."
 instructor: ghodgkinson
 skills:
   - label: "Intermediate HTML/CSS"
   - label: "WordPress themes"
   - label: "WordPress tags"
-  - label: "And more…"
 audience:
   - label: "Developers"
   - label: "Designers with coding chops"
   - label: "WordPress beginners"
+lessons_duration: "1 Hour"
+completion_duration: "Up to 3 Hours"
+skill_level: "Intermediate"
 ---
