--- a/_data/courses/GYM-015.yml
+++ b/_data/courses/GYM-015.yml
@@ -6,9 +6,9 @@ course_type: short
 live: true
 url: /courses/course-v1:GYM+015+0/about
 poster_art: /img/course-artwork/png/gym-015.png
-topic: "Prototyping"
+topic: "UX"
 subtopics:
-  - label: "UX"
+  - label: "Prototyping"
   - label: "Sketch"
   - label: "Axure"
   - label: "Figma"
@@ -19,10 +19,11 @@ skills:
   - label: "How to choose the right method of prototyping"
   - label: "How to articulate the benefits of prototyping"
   - label: "How to evaluate prototyping services and software"
-  - label: "And more…"
 audience:
   - label: "Anyone interested in building website, mobile, or web app prototypes"
   - label: "Aspiring UX and/or UI designers"
   - label: "Web designers and developers"
-
+lessons_duration: "1 Hour"
+completion_duration: "Up to 1.5 Hours"
+skill_level: "Beginner"
 ---
