--- a/_data/courses/GYM-017.yml
+++ b/_data/courses/GYM-017.yml
@@ -6,7 +6,7 @@ course_type: short
 live: true
 url: /courses/course-v1:GYM+017+0/about
 poster_art: /img/course-artwork/png/gym-017.png
-topic: "Career Skills"
+topic: "Design"
 subtopics:
   - label: "Design Systems"
 short_description: "Learn how to effectively integrate pattern libraries and design systems into your organization’s workflow."
@@ -15,9 +15,11 @@ skills:
   - label: "Design Thinking"
   - label: "User Experience Design"
   - label: "Working with pattern libraries"
-  - label: "And more…"
 audience:
   - label: "Anyone interested in design systems"
   - label: "Designers, developers, and product managers"
   - label: "Teams that are new to the design systems process"
+lessons_duration: "Under 1 Hour"
+completion_duration: "Up to 1 Hour"
+skill_level: "Beginner"
 ---
