--- a/_data/courses/GYM-020.yml
+++ b/_data/courses/GYM-020.yml
@@ -6,7 +6,7 @@ course_type: short
 live: true
 url: /courses/course-v1:GYM+020+0/about
 poster_art: /img/course-artwork/png/gym-020.png
-topic: "User Experience"
+topic: "Design"
 subtopics:
   - label: "Design Systems"
 short_description: "Learn how pattern libraries and design systems can change and improve the work your teams do on a daily basis."
@@ -15,9 +15,11 @@ skills:
   - label: "Improving team collaboration"
   - label: "Design thinking"
   - label: "Developing strategies for better digital products"
-  - label: "And more…"
 audience:
   - label: "Product managers and/or product owners"
   - label: "Anyone managing a design systems initiative"
   - label: "Anyone interested in design systems work"
+lessons_duration: "1 Hour"
+completion_duration: "Up to 1.5 Hours"
+skill_level: "Beginner"
 ---
