--- a/_data/courses/GYM-100.yml
+++ b/_data/courses/GYM-100.yml
@@ -9,7 +9,7 @@ retired_message:
   2: "<strong>This course has been retired.</strong> We recommend taking the course <a href='https://thegymnasium.com/courses/GYM/107/0/about'>Modern Web Design</a> instead. It’s a bit more advanced, but we think you’d get a lot out of it."
 url: /courses/GYM/100/0/about
 poster_art: /img/course-artwork/png/gym-100.png
-topic: "Design & Development"
+topic: "Development"
 short_description: "This course has been retired."
 short_description_orig: "Learn HTML and CSS and become the Web Designer that Developers love. Professional design experience is a prerequisite, but no prior web or coding experience is necessary."
 instructor: jwebb
@@ -17,10 +17,12 @@ skills:
   - label: "HTML basics"
   - label: "CSS basics"
   - label: "Bootstrap basics"
-  - label: "And more…"
 audience:
   - label: "Designers"
   - label: "Creatives"
   - label: "Copy Editors"
   - label: "Anyone struggling with HTML"
+lessons_duration: "5 Hour"
+completion_duration: "Up to 25 Hours"
+skill_level: "Beginner"
 ---
