--- a/_data/courses/GYM-102.yml
+++ b/_data/courses/GYM-102.yml
@@ -6,16 +6,20 @@ course_type: full
 live: true
 url: /courses/GYM/102/0/about
 poster_art: /img/course-artwork/png/gym-102.png
-topic: "JavaScript"
+topic: "Development"
+subtopics:
+  - label: "JavaScript"
 short_description: "This course will teach you 5 easy techniques for adding interactivity to your web pages. By the end of the course, you’ll be able to add features and style to your web pages, from simple animations to complex dynamic content."
 instructor: dporter
 skills:
   - label: "Navigation, animation, and server interaction"
   - label: "JavaScript"
   - label: "HTML/CSS"
-  - label: "And more…"
 audience:
   - label: "Designers with coding chops"
   - label: "Front-End Developers"
   - label: "JavaScript Developers"
+lessons_duration: "3.5 Hours"
+completion_duration: "Up to 17 Hours"
+skill_level: "Intermediate"
 ---
