--- a/_data/courses/GYM-107.yml
+++ b/_data/courses/GYM-107.yml
@@ -6,17 +6,18 @@ course_type: full
 live: true
 url: /courses/GYM/107/0/about
 poster_art: /img/course-artwork/png/gym-107.png
-topic: "Design & Development"
+topic: "Development"
 short_description: "This course will prepare you to be a front-end developer by walking you through the process of building a simple, responsive website using HTML, CSS, and JavaScript."
 instructor: agustafson
 skills:
   - label: "HTML Markup"
   - label: "Using CSS as a design tool"
   - label: "Adding interactivity with JavaScript"
-  - label: "And more…"
 audience:
   - label: "Aspiring Front-End Developers"
   - label: "Designers"
   - label: "Creatives"
-
+lessons_duration: "5 Hours"
+completion_duration: "Up to 22 Hours"
+skill_level: "Intermediate"
 ---
