Update courses language
- Update case formatting

--- a/_data/courses/GYM-002.yml
+++ b/_data/courses/GYM-002.yml
@@ -20,7 +20,7 @@ audience:
   - label: "Front-End Developers"
   - label: "Back-End Developers"
   - label: "JavaScript Developers and Programmers"
-lessons_duration: "Under 1 Hour"
-completion_duration: "Up to 2 Hours"
+lessons_duration: "Under 1 hour"
+completion_duration: "Up to 2 hours"
 skill_level: "Intermediate"
 ---
