--- a/_data/courses/GYM-003.yml
+++ b/_data/courses/GYM-003.yml
@@ -20,7 +20,7 @@ audience:
   - label: "Web Designers"
   - label: "Front-End Developers"
   - label: "UX Designers"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 2 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 2 hours"
 skill_level: "Intermediate"
 ---
