--- a/_data/courses/GYM-005.yml
+++ b/_data/courses/GYM-005.yml
@@ -22,7 +22,7 @@ audience:
   - label: "UX Designers"
   - label: "Web Designers"
   - label: "Front-End Developers"
-lessons_duration: "2 Hours"
-completion_duration: "Up to 5 Hours"
+lessons_duration: "2 hours"
+completion_duration: "Up to 5 hours"
 skill_level: "Beginner"
 ---
