--- a/_data/courses/GYM-009.yml
+++ b/_data/courses/GYM-009.yml
@@ -17,7 +17,7 @@ audience:
   - label: "Developers"
   - label: "Designers with coding chops"
   - label: "Drupal 8 beginners"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 2.5 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 2.5 hours"
 skill_level: "Intermediate"
 ---
