--- a/_data/courses/GYM-012.yml
+++ b/_data/courses/GYM-012.yml
@@ -19,7 +19,7 @@ audience:
   - label: "Front-end developers"
   - label: "JavaScript programmers"
   - label: "Designers with coding chops"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 2 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 2 hours"
 skill_level: "Intermediate"
 ---
