--- a/_data/courses/GYM-013.yml
+++ b/_data/courses/GYM-013.yml
@@ -17,7 +17,7 @@ audience:
   - label: "Anyone interested in 3D modeling"
   - label: "Anyone interested in virtual reality workflow"
   - label: "3D artists interested in virtual reality production"
-lessons_duration: "1.5 Hours"
-completion_duration: "Up to 4 Hours"
+lessons_duration: "1.5 hours"
+completion_duration: "Up to 4 hours"
 skill_level: "Intermediate"
 ---
