--- a/_data/courses/GYM-015.yml
+++ b/_data/courses/GYM-015.yml
@@ -23,7 +23,7 @@ audience:
   - label: "Anyone interested in building website, mobile, or web app prototypes"
   - label: "Aspiring UX and/or UI designers"
   - label: "Web designers and developers"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 1.5 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 1.5 hours"
 skill_level: "Beginner"
 ---
