--- a/_data/courses/GYM-017.yml
+++ b/_data/courses/GYM-017.yml
@@ -19,7 +19,7 @@ audience:
   - label: "Anyone interested in design systems"
   - label: "Designers, developers, and product managers"
   - label: "Teams that are new to the design systems process"
-lessons_duration: "Under 1 Hour"
-completion_duration: "Up to 1 Hour"
+lessons_duration: "Under 1 hour"
+completion_duration: "Up to 1 hour"
 skill_level: "Beginner"
 ---
