--- a/_data/courses/GYM-018.yml
+++ b/_data/courses/GYM-018.yml
@@ -19,7 +19,7 @@ audience:
   - label: "Web and UX designers"
   - label: "Creative directors"
   - label: "Teams that are new to the design systems process"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 1.5 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 1.5 hours"
 skill_level: "Beginner"
 ---
