--- a/_data/courses/GYM-020.yml
+++ b/_data/courses/GYM-020.yml
@@ -19,7 +19,7 @@ audience:
   - label: "Product managers and/or product owners"
   - label: "Anyone managing a design systems initiative"
   - label: "Anyone interested in design systems work"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 1.5 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 1.5 hours"
 skill_level: "Beginner"
 ---
