--- a/_data/courses/GYM-100.yml
+++ b/_data/courses/GYM-100.yml
@@ -22,7 +22,7 @@ audience:
   - label: "Creatives"
   - label: "Copy Editors"
   - label: "Anyone struggling with HTML"
-lessons_duration: "5 Hour"
-completion_duration: "Up to 25 Hours"
+lessons_duration: "5 hour"
+completion_duration: "Up to 25 hours"
 skill_level: "Beginner"
 ---
