--- a/_data/courses/GYM-101.yml
+++ b/_data/courses/GYM-101.yml
@@ -19,7 +19,7 @@ skills:
 audience:
   - label: "Designers with coding chops"
   - label: "Front-End Developers"
-lessons_duration: "6 Hours"
-completion_duration: "Up to 24 Hours"
+lessons_duration: "6 hours"
+completion_duration: "Up to 24 hours"
 skill_level: "Beginner"
 ---
