--- a/_data/courses/GYM-102.yml
+++ b/_data/courses/GYM-102.yml
@@ -19,7 +19,7 @@ audience:
   - label: "Designers with coding chops"
   - label: "Front-End Developers"
   - label: "JavaScript Developers"
-lessons_duration: "3.5 Hours"
-completion_duration: "Up to 17 Hours"
+lessons_duration: "3.5 hours"
+completion_duration: "Up to 17 hours"
 skill_level: "Intermediate"
 ---
