--- a/_data/courses/GYM-103.yml
+++ b/_data/courses/GYM-103.yml
@@ -18,7 +18,7 @@ audience:
   - label: "Creatives"
   - label: "UX Designers"
   - label: "Anyone who works on UX projects"
-lessons_duration: "3 Hours"
-completion_duration: "Up to 12 Hours"
+lessons_duration: "3 hours"
+completion_duration: "Up to 12 hours"
 skill_level: "Beginner"
 ---
