--- a/_data/courses/GYM-104.yml
+++ b/_data/courses/GYM-104.yml
@@ -19,7 +19,7 @@ audience:
   - label: "Designers with coding chops"
   - label: "Front-End Developers"
   - label: "jQuery Developers"
-lessons_duration: "5 Hours"
-completion_duration: "Up to 21 Hours"
+lessons_duration: "5 hours"
+completion_duration: "Up to 21 hours"
 skill_level: "Intermediate"
 ---
