--- a/_data/courses/GYM-106.yml
+++ b/_data/courses/GYM-106.yml
@@ -17,7 +17,7 @@ audience:
   - label: "Designers"
   - label: "Creatives"
   - label: "Data scientists"
-lessons_duration: "2.5 Hours"
-completion_duration: "Up to 17 Hours"
+lessons_duration: "2.5 hours"
+completion_duration: "Up to 17 hours"
 skill_level: "Beginner"
 ---
