--- a/_data/courses/GYM-107.yml
+++ b/_data/courses/GYM-107.yml
@@ -17,7 +17,7 @@ audience:
   - label: "Aspiring Front-End Developers"
   - label: "Designers"
   - label: "Creatives"
-lessons_duration: "5 Hours"
-completion_duration: "Up to 22 Hours"
+lessons_duration: "5 hours"
+completion_duration: "Up to 22 hours"
 skill_level: "Intermediate"
 ---
