--- a/_data/courses/GYM-108.yml
+++ b/_data/courses/GYM-108.yml
@@ -20,7 +20,7 @@ audience:
   - label: "Front-End Developers"
   - label: "JavaScript Developers"
   - label: "Full Stack Developers"
-lessons_duration: "3 Hours"
-completion_duration: "Up to 12 Hours"
+lessons_duration: "3 hours"
+completion_duration: "Up to 12 hours"
 skill_level: "Intermediate"
 ---
