--- a/_data/courses/GYM-109.yml
+++ b/_data/courses/GYM-109.yml
@@ -17,7 +17,7 @@ audience:
   - label: "Front-End Developers"
   - label: "Designers with coding chops"
   - label: "JavaScript Developers"
-lessons_duration: "4 Hours"
-completion_duration: "Up to 16 Hours"
+lessons_duration: "4 hours"
+completion_duration: "Up to 16 hours"
 skill_level: "Intermediate"
 ---
