--- a/_data/courses/GYM-001.yml
+++ b/_data/courses/GYM-001.yml
@@ -17,7 +17,7 @@ audience:
   - label: "Designers"
   - label: "Developers"
   - label: "Anyone with a deadline"
-lessons_duration: "Under 1 Hour"
-completion_duration: "Up to 1.5 Hours"
+lessons_duration: "Under 1 hour"
+completion_duration: "Up to 1.5 hours"
 skill_level: "Beginner"
 ---
