--- a/_data/courses/GYM-007.yml
+++ b/_data/courses/GYM-007.yml
@@ -17,7 +17,7 @@ audience:
   - label: "Developers"
   - label: "Designers"
   - label: "Digital Creatives"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 2 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 2 hours"
 skill_level: "Intermediate"
 ---
