--- a/_data/courses/GYM-008.yml
+++ b/_data/courses/GYM-008.yml
@@ -22,7 +22,7 @@ audience:
   - label: "UX Designers"
   - label: "Interactive Designers"
   - label: "Information Architects"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 2 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 2 hours"
 skill_level: "Intermediate"
 ---
