--- a/_data/courses/GYM-011.yml
+++ b/_data/courses/GYM-011.yml
@@ -17,7 +17,7 @@ audience:
   - label: "Front-end developers"
   - label: "Designers with coding chops"
   - label: "JavaScript programmers"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 3 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 3 hours"
 skill_level: "Intermediate"
 ---
