--- a/_data/courses/GYM-014.yml
+++ b/_data/courses/GYM-014.yml
@@ -20,7 +20,7 @@ audience:
   - label: "Anyone interested in building design systems"
   - label: "Anyone interested in building website or web app prototypes"
   - label: "UX designers with coding chops"
-lessons_duration: "2 Hours"
-completion_duration: "Up to 4 Hours"
+lessons_duration: "2 hours"
+completion_duration: "Up to 4 hours"
 skill_level: "Intermediate"
 ---
