--- a/_data/courses/GYM-016.yml
+++ b/_data/courses/GYM-016.yml
@@ -19,7 +19,7 @@ audience:
   - label: "Anyone interested in building more accessible websites"
   - label: "Web designers with coding chops"
   - label: "Front-end developers"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 2 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 2 hours"
 skill_level: "Intermediate"
 ---
