--- a/_data/courses/GYM-019.yml
+++ b/_data/courses/GYM-019.yml
@@ -19,7 +19,7 @@ audience:
   - label: "Front-end developers"
   - label: "Teams beginning the design systems process"
   - label: "Designers with coding skills"
-lessons_duration: "1 Hour"
-completion_duration: "Up to 1.5 Hours"
+lessons_duration: "1 hour"
+completion_duration: "Up to 1.5 hours"
 skill_level: "Intermediate"
 ---
