Update about courses section
- Add missing content

--- a/_data/courses-page.yml
+++ b/_data/courses-page.yml
@@ -26,7 +26,7 @@ about_section:
       - label: "Optional homework and quizzes to sharpen your skills"
     2:
       - label: "Video Lessons: 3–5 hours"
-      - label: "Course Completion: 12–hours"
+      - label: "Course Completion: 12–22 hours"
   short_courses:
     1:
       - label: "Badge to share on social media"
