--- a/_data/take5/GYM-5052.yml
+++ b/_data/take5/GYM-5052.yml
@@ -1,6 +1,6 @@
 ---
 course_ID: GYM-5052
-title: "Make a Great First Impression with Your Portfolio"
+title: "Making a Great First Impression with Your Portfolio"
 date: 2022-08-22T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5052/
