--- a/_data/take5/GYM-5025.yml
+++ b/_data/take5/GYM-5025.yml
@@ -29,6 +29,6 @@ related_content:
 - label: "CSS Vars Ponyfill by John Hildenbiddle"
   url: "https://jhildenbiddle.github.io/css-vars-ponyfill/#/"
 - label: "Naming CSS Stuff is Really Hard by Ethan Muller"
-  url: "https://seesparkbox.com/foundry/naming_css_stuff_is_really_hard"
+  url: "https://sparkbox.com/foundry/naming_css_stuff_is_really_hard"
 skill_level: "Intermediate"
 ---
