--- a/_data/take5/GYM-5040.yml
+++ b/_data/take5/GYM-5040.yml
@@ -18,7 +18,7 @@ related_content:
   url: "https://www.sitepoint.com/the-hidden-nuggets-of-wcag2-when-not-to-use-alt-attributes/"
 - label: "Alt text decision tree"
   url: "https://www.w3.org/WAI/tutorials/images/decision-tree/"
-- label: "Alt text and image descriptions made simple"
-  url: "https://meloukhia.net/2016/10/alt_text_and_image_descriptions_made_simple/"
+- label: "When writing alt text, ask yourself this question"
+  url: "https://www.centercentre.com/2016/06/09/2016-06-09-when-writing-alt-text-ask-yourself-this-question/"
 skill_level: "Beginner"
 ---
