Update workshop page
- Update language

--- a/_data/workshops/GYM-700.yml
+++ b/_data/workshops/GYM-700.yml
@@ -16,7 +16,7 @@ instructor: josborn
 info:
   - label: "An interactive workshop of 5–10 participants"
   - label: "One hour a day for a week of live class via video conferencing"
-  - label: "An hour on homework in between sessions"
+  - label: "One hour on homework in between sessions"
   - label: "Learn a content-first approach to building your personal brand"
   - label: "Discover how to make great first impression"
   - label: "Learn how to write effective case studies"
