Update GYM-5053 related content
- Update title text and URL

--- a/_data/take5/GYM-5053.yml
+++ b/_data/take5/GYM-5053.yml
@@ -24,7 +24,7 @@ related_content:
   url: "https://www.scienceofpeople.com/home-photo-shoot/"
 - label: "Are people still using contact forms? by Birgitta Rún Sveinbjörnsdóttir"
   url: "https://uxdesign.cc/your-users-do-not-trust-contact-forms-but-what-do-they-use-instead-a89bee668e48"
-- label: "Gymnasium: Make a Great First Impression with Your Portfolio"
-  url: "https://thegymnasium.com/courses/take5/make-a-great-first-impression-with-your-portfolio"
+- label: "Gymnasium: Making a Great First Impression with Your Portfolio"
+  url: "https://thegymnasium.com/courses/take5/making-a-great-first-impression-with-your-portfolio"
 skill_level: "Beginner"
 ---
