--- a/_data/take5/GYM-5052.yml
+++ b/_data/take5/GYM-5052.yml
@@ -11,7 +11,7 @@ instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "Career Skills"
 subtopics:
   - label: "Portfolio Development"
-video_ID: zz_PtAeEtGY
+video_ID: Q2dafEXRx_s
 video_duration: "4:35"
 featured: false
 short_description: "In this tutorial, you’ll learn three ways to make a great first impression with your online portfolio and improve your chances of getting hired."
