Update related content links
- Update GYM-5056
- Update GYM-5053
- Update GYM-5052

--- a/_data/take5/GYM-5052.yml
+++ b/_data/take5/GYM-5052.yml
@@ -26,5 +26,7 @@ related_content:
   url: "https://www.linkedin.com/pulse/design-leader-job-search-its-all-brand-yours-susie-hall/"
 - label: "Gymnasium: Crafting a Concise About Page"
   url: "https://thegymnasium.com/courses/take5/crafting-a-concise-about-page"
+- label: "Gymnasium: Taking Your Portfolio Case Studies to the Next Level"
+  url: "https://thegymnasium.com/courses/take5/taking-your-portfolio-case-studies-to-the-next-level"
 skill_level: "Beginner"
 ---
