--- a/_data/take5/GYM-5053.yml
+++ b/_data/take5/GYM-5053.yml
@@ -26,5 +26,7 @@ related_content:
   url: "https://uxdesign.cc/your-users-do-not-trust-contact-forms-but-what-do-they-use-instead-a89bee668e48"
 - label: "Gymnasium: Making a Great First Impression with Your Portfolio"
   url: "https://thegymnasium.com/courses/take5/making-a-great-first-impression-with-your-portfolio"
+- label: "Gymnasium: Taking Your Portfolio Case Studies to the Next Level"
+  url: "https://thegymnasium.com/courses/take5/taking-your-portfolio-case-studies-to-the-next-level"
 skill_level: "Beginner"
 ---
