--- a/_data/take5/GYM-5056.yml
+++ b/_data/take5/GYM-5056.yml
@@ -24,5 +24,9 @@ related_content:
   url: "https://uxplanet.org/4-tips-for-structuring-case-studies-in-your-design-portfolio-f7436fd460ec"
 - label: "All About Process: Dissecting Case Study Portfolios by Adnan Puzic"
   url: "https://www.toptal.com/designers/ui/case-study-portfolio"
+- label: "Gymnasium: Making a Great First Impression with Your Portfolio"
+  url: "https://thegymnasium.com/courses/take5/making-a-great-first-impression-with-your-portfolio"
+- label: "Gymnasium: Crafting a Concise About Page"
+  url: "https://thegymnasium.com/courses/take5/crafting-a-concise-about-page"
 skill_level: "Beginner"
 ---
