--- a/_data/courses/GYM-013.yml
+++ b/_data/courses/GYM-013.yml
@@ -6,6 +6,7 @@ course_type: short
 live: true
 url: /courses/course-v1:GYM+013+0/about
 poster_art: /img/course-artwork/png/gym-013.png
+img_bg_color: 5ca5a0
 topic: "Design"
 short_description: "Learn how to create 3D generated imagery in Maya for use in Virtual Reality production."
 instructor: groberts
