--- a/_data/workshops/GYM-700.yml
+++ b/_data/workshops/GYM-700.yml
@@ -6,6 +6,7 @@ datetime: "December 5–9, Monday–Friday, 4–5 PM EST"
 course_type: workshop
 url: /courses/GYM/700/0/about
 poster_art: /img/course-artwork/png/gym-700.png
+img_bg_color: 2c9959
 live: false
 topic: "Career Skills"
 short_description: "This workshop will teach students how to create an outstanding portfolio using content strategy and storytelling skills. Students will leave with actionable next steps to improve their portfolio."
