--- a/_data/courses/GYM-003.yml
+++ b/_data/courses/GYM-003.yml
@@ -8,6 +8,7 @@ retired_message:
   1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course, but you can still view the lessons. <span class='text-wrap'>We recommend watching the tutorial <a href='https://thegymnasium.com/courses/take5/prototyping-in-the-browser-with-css-grid-layout'>Prototyping in the Browser with CSS Grid Layout</a> instead.</span>"
 url: /courses/GYM/003/0/about
 poster_art: /img/course-artwork/png/gym-003.png
+img_bg_color: d73158
 topic: "Development"
 short_description: "This course has been retired."
 short_description_orig: "Get up to speed with the Twitter Bootstrap’s grid layout system and learn how to build a responsive layout that looks great on multiple screen sizes and devices."
