--- a/_data/courses/GYM-004.yml
+++ b/_data/courses/GYM-004.yml
@@ -6,6 +6,7 @@ course_type: short
 live: true
 url: /courses/GYM/004/0/about
 poster_art: /img/course-artwork/png/gym-004.png
+img_bg_color: d73158
 topic: "Development"
 short_description: "Learn how to convert your HTML/CSS design into a WordPress website. Discover how to set up a local development environment, and add WordPress tags to your design."
 instructor: ghodgkinson
