--- a/_data/courses/GYM-012.yml
+++ b/_data/courses/GYM-012.yml
@@ -6,6 +6,7 @@ course_type: short
 live: true
 url: /courses/course-v1:GYM+012+0/about
 poster_art: /img/course-artwork/png/gym-012.png
+img_bg_color: 764c9f
 topic: "Development"
 subtopics:
   - label: "JavaScript"
