--- a/_data/courses/GYM-016.yml
+++ b/_data/courses/GYM-016.yml
@@ -6,6 +6,7 @@ course_type: short
 live: true
 url: /courses/course-v1:GYM+016+0/about
 poster_art: /img/course-artwork/png/gym-016.png
+img_bg_color: d73158
 topic: "Development"
 subtopics:
   - label: "Accessibility"
