--- a/_data/courses/GYM-102.yml
+++ b/_data/courses/GYM-102.yml
@@ -6,6 +6,7 @@ course_type: full
 live: true
 url: /courses/GYM/102/0/about
 poster_art: /img/course-artwork/png/gym-102.png
+img_bg_color: 764c9f
 topic: "Development"
 subtopics:
   - label: "JavaScript"
