--- a/_data/courses/GYM-106.yml
+++ b/_data/courses/GYM-106.yml
@@ -6,6 +6,7 @@ course_type: full
 live: true
 url: /courses/GYM/106/0/about
 poster_art: /img/course-artwork/png/gym-106.png
+img_bg_color: 2c9959
 topic: "Design"
 short_description: "Learn the design and visual principles needed to create effective information graphics and data visualizations."
 instructor: groberts
