--- a/_data/courses/GYM-108.yml
+++ b/_data/courses/GYM-108.yml
@@ -6,6 +6,7 @@ course_type: full
 live: true
 url: /courses/course-v1:GYM+108+0/about
 poster_art: /img/course-artwork/png/gym-108.png
+img_bg_color: 764c9f
 topic: "Development"
 subtopics:
   - label: "JavaScript"
