Add font to included_files

--- a/netlify.toml
+++ b/netlify.toml
@@ -30,7 +30,7 @@ edge_functions = ".netlify/functions"
   path = "/og-image"
 
 [functions."og"]
-  included_files = ["_data/courses/**.yml", "_data/take5/**.yml", "_data/workshops/**.yml", "_data/webinars/**.yml"]
+  included_files = ["/fonts/brandon_bld-webfont.woff","_data/courses/**.yml", "_data/take5/**.yml", "_data/workshops/**.yml", "_data/webinars/**.yml"]
 
 # dev branch build
 # https://dev--gymcms.netlify.com/
