--- a/netlify.toml
+++ b/netlify.toml
@@ -26,8 +26,8 @@
 edge_functions = ".netlify/functions"
 
 # [[edge_functions]]
-#   function = "og"
-#   path = "/og-image"
+  function = "og"
+  path = "/og-image"
 
 [[edge_functions]]
   function = "test"
