--- a/netlify.toml
+++ b/netlify.toml
@@ -25,7 +25,7 @@
 [build]
 edge_functions = ".netlify/functions"
 
-# [[edge_functions]]
+[[edge_functions]]
   function = "og"
   path = "/og-image"
 
