--- a/_data/take5/GYM-5002.yml
+++ b/_data/take5/GYM-5002.yml
@@ -5,6 +5,9 @@ date: 2019-10-29T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5002/
 poster_art: /img/take5/posters/gym-5002.jpg
+img_bg_color:
+img_offset: 500
+bg_color: d73158
 live: true
 instructor: "Jeremy Osborn"
 instructor_bio: "Director of Learning at Aquent Gymnasium"
