--- a/_data/take5/GYM-5014.yml
+++ b/_data/take5/GYM-5014.yml
@@ -5,6 +5,9 @@ date: 2019-11-07T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5014/
 poster_art: /img/take5/posters/gym-5014.jpg
+img_bg_color:
+img_offset:
+bg_color: 5ca5a0
 live: true
 instructor: "Jeremy Osborn"
 instructor_bio: "Director of Learning at Aquent Gymnasium"
