--- a/_data/take5/GYM-5028.yml
+++ b/_data/take5/GYM-5028.yml
@@ -5,6 +5,9 @@ date: 2020-02-17T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5028/
 poster_art: /img/take5/posters/gym-5028.jpg
+img_bg_color:
+img_offset:
+bg_color: d73158
 live: true
 instructor: "Jeremy Osborn"
 instructor_bio: "Director of Learning at Aquent Gymnasium"
