--- a/_data/take5/GYM-5043.yml
+++ b/_data/take5/GYM-5043.yml
@@ -5,6 +5,9 @@ date: 2020-10-20T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5043/
 poster_art: /img/take5/posters/gym-5043.jpg
+img_bg_color:
+img_offset:
+bg_color: d73158
 live: true
 instructor: "Clarissa Peterson"
 instructor_bio: "Strategy Director at Forum One"
