--- a/_data/take5/GYM-5053.yml
+++ b/_data/take5/GYM-5053.yml
@@ -5,6 +5,9 @@ date: 2022-08-24T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5053/
 poster_art: /img/take5/posters/gym-5053.jpg
+img_bg_color:
+img_offset:
+bg_color: 2c9959
 live: false
 instructor: "Jeremy Osborn"
 instructor_bio: "Director of Learning at Aquent Gymnasium"
