--- a/_data/take5/GYM-5005.yml
+++ b/_data/take5/GYM-5005.yml
@@ -6,7 +6,7 @@ course_type: take5
 url: /courses/take5/GYM-5005/
 poster_art: /img/take5/posters/gym-5005.jpg
 img_bg_color:
-img_offset:
+img_offset: 385
 bg_color: d73158
 live: true
 instructor: "Jeremy Osborn"
