--- a/_data/take5/GYM-5017.yml
+++ b/_data/take5/GYM-5017.yml
@@ -6,7 +6,7 @@ course_type: take5
 url: /courses/take5/GYM-5017/
 poster_art: /img/take5/posters/gym-5017.jpg
 img_bg_color:
-img_offset:
+img_offset: 175
 bg_color: 2c9959
 live: true
 instructor: "Anne Ditmeyer"
