--- a/_data/take5/GYM-5051.yml
+++ b/_data/take5/GYM-5051.yml
@@ -13,7 +13,7 @@ subtopics:
   - label: "Prototyping"
 video_ID: UYsT7xAhQZM
 video_duration: "4:55"
-featured: true
+featured: false
 short_description: "Learn advanced Auto Layout techniques in Figma such as alignment, distribution, resizing, and nesting to create complex interfaces."
 project_file_source: Figma Community
 project_files:
