Update home page hero
- Add featured Take 5 hero promo

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,5 +1,5 @@
-current_promo: articles/advocating-for-accessibility.html
-auth_promo: articles/advocating-for-accessibility.html
+current_promo: hero-take5-featured.html
+auth_promo: hero-take5-featured.html
 
 # Live Stream
 # Set true/false (lowercase).
