Update featured Take 5
- Update home page
- Update Take 5 catalog

--- a/_data/take5/GYM-5052.yml
+++ b/_data/take5/GYM-5052.yml
@@ -13,7 +13,7 @@ subtopics:
   - label: "Portfolio Development"
 video_ID: Q2dafEXRx_s
 video_duration: "4:35"
-featured: true
+featured: false
 short_description: "In this tutorial, you’ll learn three ways to make a great first impression with your online portfolio and improve your chances of getting hired."
 project_file_source:
 project_files:
