--- a/_data/courses/GYM-107.yml
+++ b/_data/courses/GYM-107.yml
@@ -6,7 +6,8 @@ course_type: full
 live: true
 url: /courses/GYM/107/0/about
 poster_art: /img/course-artwork/png/gym-107.png
-img_bg_color: d73158
+og_gen_data:
+  img_bg_color: d73158
 topic: "Development"
 short_description: "This course will prepare you to be a front-end developer by walking you through the process of building a simple, responsive website using HTML, CSS, and JavaScript."
 instructor: agustafson
