--- a/_data/courses/GYM-005.yml
+++ b/_data/courses/GYM-005.yml
@@ -8,7 +8,8 @@ retired_message:
   1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course, but you can still view the lessons."
 url: /courses/GYM/005/0/about
 poster_art: /img/course-artwork/png/gym-005.png
-img_bg_color: 5ca5a0
+og_gen_data:
+  img_bg_color: 5ca5a0
 topic: "UX"
 subtopics:
   - label: "Prototyping"
