--- a/_data/courses/GYM-014.yml
+++ b/_data/courses/GYM-014.yml
@@ -6,7 +6,8 @@ course_type: short
 live: true
 url: /courses/course-v1:GYM+014+0/about
 poster_art: /img/course-artwork/png/gym-014.png
-img_bg_color: 5ca5a0
+og_gen_data:
+  img_bg_color: 5ca5a0
 topic: "Development"
 subtopics:
   - label: "Design Systems"
