--- a/_data/courses/GYM-101.yml
+++ b/_data/courses/GYM-101.yml
@@ -8,7 +8,8 @@ retired_message:
   1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a certificate for this course, but you can still view the lessons. <span class='text-wrap'>We recommend taking the course <a href='https://thegymnasium.com/courses/course-v1:GYM+109+0/about'>Responsive Web Design Fundamentals</a> (and earning a certificate) instead.</span>"
 url: /courses/GYM/101/0/about
 poster_art: /img/course-artwork/png/gym-101.png
-img_bg_color: d73158
+og_gen_data:
+  img_bg_color: d73158
 topic: "Development"
 short_description: "This course has been retired."
 short_description_orig: "In this course, you’ll learn best practices for building responsive websites that adapt to different devices and user behaviors."
