--- a/_data/courses/GYM-103.yml
+++ b/_data/courses/GYM-103.yml
@@ -6,7 +6,8 @@ course_type: full
 live: true
 url: /courses/GYM/103/0/about
 poster_art: /img/course-artwork/png/gym-103.png
-img_bg_color: 5ca5a0
+og_gen_data:
+  img_bg_color: 5ca5a0
 topic: "UX"
 short_description: "Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in design and development."
 instructor: jwebb
