--- a/_data/courses/GYM-105.yml
+++ b/_data/courses/GYM-105.yml
@@ -8,7 +8,8 @@ retired_message:
   1: "<strong>This course has been retired.</strong>"
 url: /courses/GYM/105/0/about
 poster_art: /img/course-artwork/png/gym-105.png
-img_bg_color: 2c9959
+og_gen_data:
+  img_bg_color: 2c9959
 topic: "Career Skills"
 short_description: "This course has been retired."
 short_description_orig: "Learn how to write compelling content through meaningful audience research and find the right words to attract and engage users."
