--- a/_data/take5/GYM-5001.yml
+++ b/_data/take5/GYM-5001.yml
@@ -5,9 +5,11 @@ date: 2019-10-28T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5001/
 poster_art: /img/take5/posters/gym-5001.jpg
-img_bg_color:
-img_offset: 520
-bg_color: d73158
+og_gen_data:
+og_gen_data:
+  img_bg_color:
+  img_offset: 520
+  bg_color: d73158
 live: true
 instructor: "Jeremy Osborn"
 instructor_bio: "Director of Learning at Aquent Gymnasium"
