--- a/_data/take5/GYM-5003.yml
+++ b/_data/take5/GYM-5003.yml
@@ -5,9 +5,10 @@ date: 2019-10-30T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5003/
 poster_art: /img/take5/posters/gym-5003.jpg
-img_bg_color:
-img_offset: 315
-bg_color: d73158
+og_gen_data:
+  img_bg_color:
+  img_offset: 315
+  bg_color: d73158
 live: true
 instructor: "Jeremy Osborn"
 instructor_bio: "Director of Learning at Aquent Gymnasium"
