--- a/_data/take5/GYM-5022.yml
+++ b/_data/take5/GYM-5022.yml
@@ -5,9 +5,10 @@ date: 2019-12-10T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5022/
 poster_art: /img/take5/posters/gym-5022.jpg
-img_bg_color:
-img_offset:
-bg_color: d73158
+og_gen_data:
+  img_bg_color:
+  img_offset:
+  bg_color: d73158
 live: true
 instructor: "Jeremy Osborn"
 instructor_bio: "Director of Learning at Aquent Gymnasium"
