--- a/_data/take5/GYM-5035.yml
+++ b/_data/take5/GYM-5035.yml
@@ -5,9 +5,10 @@ date: 2020-06-25T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5035/
 poster_art: /img/take5/posters/gym-5035.jpg
-img_bg_color:
-img_offset:
-bg_color: d73158
+og_gen_data:
+  img_bg_color:
+  img_offset:
+  bg_color: d73158
 live: true
 instructor: "Ethan Marcotte"
 instructor_bio: "Partner at Autogram"
