--- a/_data/take5/GYM-5047.yml
+++ b/_data/take5/GYM-5047.yml
@@ -5,9 +5,10 @@ date: 2020-11-17T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5047/
 poster_art: /img/take5/posters/gym-5047.jpg
-img_bg_color:
-img_offset:
-bg_color: d73158
+og_gen_data:
+  img_bg_color:
+  img_offset:
+  bg_color: d73158
 live: true
 instructor: "Clarissa Peterson"
 instructor_bio: "Strategy Director at Forum One"
