--- a/_data/take5/GYM-5052.yml
+++ b/_data/take5/GYM-5052.yml
@@ -5,9 +5,10 @@ date: 2022-08-22T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5052/
 poster_art: /img/take5/posters/gym-5052.jpg
-img_bg_color:
-img_offset:
-bg_color: 2c9959
+og_gen_data:
+  img_bg_color:
+  img_offset:
+  bg_color: 2c9959
 live: false
 instructor: "Jeremy Osborn"
 instructor_bio: "Director of Learning at Aquent Gymnasium"
