Update favicon manifest
- Update formatting for readability

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,15 @@
 // manifest.json
 {
   "icons": [
-    { "src": "{{ site.url }}/favicon-192.png", "type": "image/png", "sizes": "192x192" },
-    { "src": "{{ site.url }}/favicon-512.png", "type": "image/png", "sizes": "512x512" }
+    {
+      "src": "{{ site.url }}/favicon-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "{{ site.url }}/favicon-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
   ]
 }
