--- a/_local_config.yml
+++ b/_local_config.yml
@@ -15,6 +15,7 @@ exclude:
   - 'README.md'
   - 'netlify.toml'
   - '.jekyll-cache'
+  - '.netlify/functions/README.md'
 
 include:
   - '_redirects'
