--- a/_data/take5/GYM-5055.yml
+++ b/_data/take5/GYM-5055.yml
@@ -1,21 +1,30 @@
 ---
 course_ID: GYM-5055
 title: "Creating an Effective Color Palette in Design"
-date: 2023-07-05T00:00:00-04:00
+date: 2023-03-16T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5055/
 poster_art: /img/take5/posters/gym-5055.jpg
 live: false
-instructor: "Jeremy Osborn"
-instructor_bio: "Director of Learning at Aquent Gymnasium"
+instructor: "Meagan Fisher"
+instructor_bio: "Web Developer and Designer at Owltastic"
 topic: "Design"
 subtopics:
-video_ID:
-video_duration:
+  - label: "Accessibility"
+video_ID: L0UHez2PNB4
+video_duration: "4:14"
 featured: false
-short_description:
+short_description: "Learn how to choose an effective color palette for your designs. In this tutorial by Meagan Fisher for Gymnasium, you’ll discover how color relates to brand, accessibility, and fuser experience."
 project_file_source:
 project_files:
 related_content:
+- label: "Color Contrast Checker: Check the contrast between different color combinations against Web Content Accessibility Guidelines (WCAG) and find the closest accessible colors"
+  url: "https://colourcontrast.cc"
+- label: "Color Theory 101: A Complete Guide to Color Wheels & Color Scheme by Bethany Cartwright"
+  url: "https://blog.hubspot.com/marketing/color-theory-design"
+- label: "Happy Hues: Curated colors in context"
+  url: "https://www.happyhues.co"
+- label: "Gymnasium: Getting Contrast Right in Your Typography "
+  url: "https://thegymnasium.com/courses/take5/getting-contrast-right-in-your-typography"
 skill_level: "Beginner"
 ---
